# socrates

./: .env.example  .gitignore  .sops.yaml  CHANGELOG.md  CLAUDE.md  LEARNINGS.md  README.md  eval_mini_bigcodebench.json  eval_mini_humaneval.json  eval_mini_mbpp.json  phase0_spike.py  pyproject.toml  test_hard_question.py  test_individual_models.py  test_minds_judge.py
.devtools/: agent-instructions.md
docs/: phase0-findings.md  phase2-3-plan.md  risk_analysis.md
eval/: __init__.py  cli.py  compare.py  config.py  learning.py  preflight.py  rate_limiter.py  state.py
experiments/: COMPREHENSIVE_EXPERIMENT_FINDINGS.md  EXPERIMENT_STATUS.md  FAILURE_ANALYSIS.md  GPQA_EXPERIMENT_REPORT.md  QUICK_REFERENCE.md  README.md  SYNTHESIS_RESEARCH_FINDINGS.md  adaptive_structured_prompt.md  analysis_checklist.md  experiment_results_staged.json  experiment_results_synthesis.json  investigate_structured_result.md  investigate_test_001.md  investigate_test_002.md  investigate_unstructured_result.md  investigate_v2_prompt.md  investigate_v3_prompt.md  mckinsey_guided_prompt.md  mode_combinations_20260125_171153.json  mode_combinations_20260125_175030.json  modes_comparison_20260125_152146.json  next_experiments.md  revised_design.md  runner.py  runner_comprehensive_v1.py  runner_full_backlog.py  runner_full_comparison.py  runner_fullstack.py  runner_fullstack_staged.py  runner_fullstack_v2.py  runner_fullstack_v3.py  runner_gpqa_comparison.py  runner_hybrid.py  runner_mode_combinations.py  runner_mode_combinations_full.py  runner_modes_comparison.py  runner_remaining.py  (+10 more)
(+49 files in other folders)
